Make display settings global across all pages
- Add global settings application in script.js for all pages
- Update settings_new.html to trigger global settings refresh
- Ensure theme, font scale, accent color, and accessibility settings work on all pages
- Fix timing issues with settings application

--- a/settings_new.html
+++ b/settings_new.html
@@ -280,12 +280,15 @@
 	    // Theme
 	    const themeSelect = document.getElementById('theme-select');
 	    function applyTheme(theme) {
-	        if (theme === 'dark') {
-	            document.body.classList.add('dark-mode');
+	        document.body.classList.remove('light-mode', 'dark-mode');
+	        if (theme === 'auto') {
+	            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+	            document.body.classList.add(prefersDark ? 'dark-mode' : 'light-mode');
 	        } else {
-	            document.body.classList.remove('dark-mode');
+	            document.body.classList.add(theme + '-mode');
 	        }
 	        localStorage.setItem('theme', theme);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    const savedTheme = localStorage.getItem('theme') || 'light';
 	    themeSelect.value = savedTheme;
@@ -314,6 +317,7 @@
 	        document.documentElement.style.setProperty('--font-scale', scaleValue);
 	        localStorage.setItem('fontScale', scale);
 	        fontSizeValue.textContent = scale + '%';
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    const savedFontScale = localStorage.getItem('fontScale') || '100';
 	    fontSizeSlider.value = savedFontScale;
@@ -372,6 +376,7 @@
 	        const enabled = darkModeToggle.checked;
 	        localStorage.setItem('darkMode', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('dark-mode', enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    darkModeToggle.checked = localStorage.getItem('darkMode') === 'true';
 	    updateDarkModeStatus();
@@ -381,7 +386,9 @@
 	    const accentColorPicker = document.getElementById('devAccentColor');
 	    function applyAccentColor(color) {
 	        document.documentElement.style.setProperty('--accent-color', color);
+	        document.documentElement.style.setProperty('--primary-color', color);
 	        localStorage.setItem('accentColor', color);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    const savedAccentColor = localStorage.getItem('accentColor') || '#ed2939';
 	    accentColorPicker.value = savedAccentColor;
@@ -396,6 +403,7 @@
 	        const enabled = bottomNavToggle.checked;
 	        localStorage.setItem('bottomNavEnabled', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('bottom-nav-enabled', enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    bottomNavToggle.checked = localStorage.getItem('bottomNavEnabled') !== 'false';
 	    updateBottomNavStatus();
@@ -470,6 +478,7 @@
 	        animationsStatus.classList.toggle('enabled', enabled);
 	        localStorage.setItem('animationsEnabled', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('no-animations', !enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    animationsToggle.checked = localStorage.getItem('animationsEnabled') !== 'false';
 	    updateAnimationsStatus();
@@ -484,6 +493,7 @@
 	        contrastStatus.classList.toggle('enabled', enabled);
 	        localStorage.setItem('highContrast', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('high-contrast', enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    contrastToggle.checked = localStorage.getItem('highContrast') === 'true';
 	    updateContrastStatus();
@@ -498,6 +508,7 @@
 	        reducedMotionStatus.classList.toggle('enabled', enabled);
 	        localStorage.setItem('reducedMotion', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('reduced-motion', enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    reducedMotionToggle.checked = localStorage.getItem('reducedMotion') === 'true';
 	    updateReducedMotionStatus();
@@ -512,6 +523,7 @@
 	        screenReaderStatus.classList.toggle('enabled', enabled);
 	        localStorage.setItem('screenReader', enabled ? 'true' : 'false');
 	        document.body.classList.toggle('screen-reader-active', enabled);
+	        if (window.applyGlobalSettings) window.applyGlobalSettings();
 	    }
 	    screenReaderToggle.checked = localStorage.getItem('screenReader') === 'true';
 	    updateScreenReaderStatus();
