--- a/settings_new.html
+++ b/settings_new.html
@@ -7,6 +7,7 @@
 	<title>Einstellungen</title>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="css/variables.css">
 	<link rel="stylesheet" href="css/main.css?v=20260109">
 	<link rel="stylesheet" href="css/settings_new.css">
 </head>
