--- a/points.html
+++ b/points.html
@@ -13,6 +13,7 @@
     
     <!-- Modular Stylesheets -->
     <link rel="stylesheet" href="css/main.css?v=20260109">
+    <link rel="stylesheet" href="css/bottom-nav.css?v=20260109">
 </head>
 <body>
     <nav class="navbar">
@@ -829,5 +830,33 @@
             document.getElementById('resetPointsBtn').addEventListener('click', resetPoints);
         });
     </script>
+
+	<!-- Bottom Navigation (Mobile) -->
+	<nav class="bottom-nav" id="bottomNav">
+		<div class="bottom-nav-content">
+			<a href="index.html" class="bottom-nav-item" data-nav="home">
+				<i class="fas fa-home"></i>
+				<span>Spiel</span>
+			</a>
+			<a href="points.html" class="bottom-nav-item current" data-nav="points">
+				<i class="fas fa-coins"></i>
+				<span>Punkte</span>
+				<span class="bottom-nav-badge" id="bottomNavPoints">0</span>
+			</a>
+			<a href="help.html" class="bottom-nav-item" data-nav="help">
+				<i class="fas fa-question-circle"></i>
+				<span>Hilfe</span>
+			</a>
+			<a href="faq.html" class="bottom-nav-item" data-nav="faq">
+				<i class="fas fa-circle-question"></i>
+				<span>FAQ</span>
+			</a>
+			<a href="settings_new.html" class="bottom-nav-item" data-nav="settings">
+				<i class="fas fa-cog"></i>
+				<span>Einstellungen</span>
+			</a>
+		</div>
+	</nav>
+
 </body>
 </html>
