--- a/points.html
+++ b/points.html
@@ -13,6 +13,7 @@
     
     <!-- Modular Stylesheets -->
     <link rel="stylesheet" href="css/main.css?v=20260109">
+    <link rel="stylesheet" href="css/points.css?v=20260109">
     <link rel="stylesheet" href="css/bottom-nav.css?v=20260109">
 </head>
 <body>
