--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,7 @@
     
     <!-- Modular Stylesheets -->
     <link rel="stylesheet" href="css/main.css?v=20260109">
+    <link rel="stylesheet" href="css/pages.css?v=20260109">
 </head>
 <body>
     <!-- Navbar -->
