Implementiere vollständige Entwickler-Tools Funktionalität
- Footer-Einstellungen: Zeigt/versteckt Footer-Details und Debug-Info
- Resize-Button: Zoom-Funktionalität mit CSS transform (1x-1.5x)
- Hard Reload Button: Cache leeren und Service Worker deregistrieren
- Debug-Meldungen: Vollständiges Debug-System mit UI-Konsole
- Globale Funktionen: components/dev-tools.js für alle Seiten
- Verbesserte UX: Toast-Benachrichtigungen und visuelles Feedback
- Responsive Design: Debug-Konsole für mobile Geräte

--- a/impressum.html
+++ b/impressum.html
@@ -407,6 +407,7 @@
     <div id="footer-container"></div>
 
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script>
         // Theme laden
         function loadTheme() {
