--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
     <script src="world_capitals.js"></script>
     <script src="coats_of_arms.js"></script>
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
