--- a/points.html
+++ b/points.html
@@ -246,6 +246,7 @@
     <div id="footer-container"></div>
 
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script>
         // Theme aus localStorage laden
         function loadTheme() {
