--- a/wappen.html
+++ b/wappen.html
@@ -131,6 +131,7 @@
 
     <script src="coats_of_arms.js"></script>
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script>
         // Theme laden
         function loadTheme() {
