--- a/faq.html
+++ b/faq.html
@@ -421,6 +421,7 @@
     <div id="footer-container"></div>
 
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script>
         // Theme laden (vor DOMContentLoaded für flicker-freies Laden)
         const theme = localStorage.getItem('theme') || 'light';
