--- a/help.html
+++ b/help.html
@@ -396,6 +396,7 @@
     <div id="footer-container"></div>
 
     <script src="components/footer.js"></script>
+    <script src="components/dev-tools.js"></script>
     <script>
         // Theme aus localStorage laden (vor DOMContentLoaded für flicker-freies Laden)
         const theme = localStorage.getItem('theme') || 'light';
