--- a/stats.html
+++ b/stats.html
@@ -130,6 +130,7 @@
 	<div id="footer-container"></div>
 
 	<script src="components/footer.js"></script>
+	<script src="components/dev-tools.js"></script>
 	<script src="script.js"></script>
 	<script>
 	// Statistik-Initialisierung
